--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
     <!-- Google Icons -->
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=add_comment,brand_awareness,comedy_mask,delete,edit,info,library_add,license,playing_cards,question_exchange,trophy,workspace_premium"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=add_comment,brand_awareness,comedy_mask,delete,edit,info,library_add,license,playing_cards,question_exchange,trophy,visibility,visibility_off,workspace_premium"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Nongame!</title>
